messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue # Distinct name
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: v1 # Unique label for Blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: v1 # Unique label for Blue
    spec:
      containers:
      - name: django-app
        image: messaging_app-web:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
