messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      version: v2
  template:
    metadata:
      labels:
        app: messaging-app
        version: v2
    spec:
      containers:
      - name: django-app
        image: messaging_app-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
