messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
    version: v1 # This points to Blue initially
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
